<resources>
    <string name="AppListaCurso">My Application</string>
    <string name="txt_titulo">Aplicativo Lista VIP Curso Android</string>
    <string name="txt_hint_edit_primeiro_nome">Primeiro Nome</string>
    <string name="txt_hint_edit_sobrenome">Sobrenome</string>
    <string name="txt_hint_edit_nome_do_curso">Nome do Curso Desejado</string>
    <string name="txt_hint_edit_telefone_contato">Telefone de Contato</string>
    <string name="txt_button_salvar">Salvar</string>
    <string name="txt_button_limpar">Limpar</string>
    <string name="txt_button_finalizar">Finalizar</string>

</resources>